<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Payment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txtViewPayoptions"
            android:layout_width="169dp"
            android:layout_height="74dp"
            android:layout_marginStart="121dp"
            android:layout_marginTop="90sp"
            android:layout_marginEnd="121sp"
            android:layout_marginBottom="560dp"
            android:text="@string/payment_options"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>



    <RadioGroup
        android:id="@+id/radioGrp_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:layout_marginTop="40sp"
        >
        <RadioButton
            android:id="@+id/radioBtnCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150sp"
            android:layout_marginStart="50sp"
            android:text="@string/cash"
            android:textSize="20sp"
            />
        <RadioButton
            android:id="@+id/radioBtnCC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:layout_marginStart="50sp"
            android:text="@string/credit_card"
            android:textSize="20sp"
            />
        <RadioButton
            android:id="@+id/radioBtnDCs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:layout_marginStart="50sp"
            android:text="@string/debit_card"
            android:textSize="20sp"
            />

    </RadioGroup>
</FrameLayout>