<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:padding="15dp"
            android:text="@string/menu_item_apartment"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:textAlignment="center">

            <CheckBox
                android:id="@+id/checkbox_apartment_one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/apartment_one"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/image_apartment_one"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.3"
                android:contentDescription="@string/apartment_one"
                android:src="@drawable/apartment_one" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:textAlignment="center">

            <CheckBox
                android:id="@+id/checkbox_apartment_two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/apartment_two"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/image_apartment_two"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.3"
                android:contentDescription="@string/apartment_two"
                android:src="@drawable/apartment_two" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:textAlignment="center">

            <CheckBox
                android:id="@+id/checkbox_apartment_three"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/apartment_three"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/image_apartment_three"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.3"
                android:contentDescription="@string/apartment_three"
                android:src="@drawable/apartment_three" />

        </LinearLayout>

        <Button
            android:id="@+id/apartment_checkout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="50dp"
            android:text="@string/checkout_button_text"
            android:textAlignment="center" />

    </LinearLayout>

</RelativeLayout>
