<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetachedHomes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:padding="20dp"
            android:text="@string/menu_item_detached_house"
            android:textSize="25sp"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:textAlignment="center"
            tools:ignore="MissingConstraints">

            <CheckBox
                android:id="@+id/checkbox_detached_home_one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/detached_home_one"
                android:textSize="15sp"
                android:buttonTint="@color/grandis"/>

            <ImageView
                android:id="@+id/image_apartment_one"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.3"
                android:contentDescription="@string/detached_home_one"
                android:src="@drawable/detached_home_one" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:textAlignment="center"
            tools:ignore="MissingConstraints">

            <CheckBox
                android:id="@+id/checkbox_detached_home_two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/detached_home_two"
                android:textSize="15sp"
                android:buttonTint="@color/grandis"/>

            <ImageView
                android:id="@+id/image_apartment_two"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.3"
                android:contentDescription="@string/detached_home_two"
                android:src="@drawable/detached_home_two" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:textAlignment="center"
            tools:ignore="MissingConstraints">

            <CheckBox
                android:id="@+id/checkbox_detached_home_three"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/detached_home_three"
                android:textSize="15sp"
                android:buttonTint="@color/grandis"/>

            <ImageView
                android:id="@+id/image_apartment_three"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.3"
                android:contentDescription="@string/detached_home_three"
                android:src="@drawable/detached_home_three" />

        </LinearLayout>

        <Button
            android:id="@+id/detached_house_checkout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="50dp"
            android:text="@string/checkout_button_text"
            android:textAlignment="center"
            android:backgroundTint="@color/earth"
            tools:ignore="MissingConstraints"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>